Lista de preguntas

--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -1,2 +1,4 @@
-<p><%=respuesta %></p>
-<span><a href="/quizes/question">Volver</a></span>
+<p>
+<%=respuesta %>
+<a href="/quizes/<%=quiz.id %>">Volver</a>
+</p>
