--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,12 +15,12 @@
   <body>
     <div id="page-wrap">
       <header class="main" id="h1">
-        <h2>Quiz: el juego de las preguntas</h2>
+        <h2>Quiz<span>: el juego de las preguntas</span></h2>
       </header>
 
       <nav class="main" id="n1" role="navigation">
         <span><a href="/">Inicio</a></span>
-        <span><a href="/quizes/question">Preguntas</a></span>
+        <span><a href="/quizes">Preguntas</a></span>
         <span><a href="/author">Créditos</a></span>
       </nav>
 
@@ -29,7 +29,8 @@
       </section>
 
       <footer class="main" id="f1">
-        <a href="https://github.com/celsoconde/quiz">Mi proyecto en GitHub</a>
+        <a href="https://es.wikipedia.org/wiki/Quiz">¿Que es un Quiz?</a>
+        <a href="https://github.com/celsoconde/quiz">Proyecto en GitHub</a>
       </footer>
     </div>
   </body>
