--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,3 +8,25 @@ section > div { padding: 20px;}
 header, nav, section { background: #eee; text-align: center;}
 footer { background: #eee; text-align: center;}
 nav span {margin: 0px 10px 0px 0px; }
+form input { margin-top: 5px; margin-bottom: 5px;}
+table {
+   width: 100%;
+   border: 1px solid #000;
+}
+th, td {
+   width: 25%;
+   text-align: center;
+   vertical-align: top;
+   border: 1px solid #000;
+   border-collapse: collapse;
+   padding: 0.3em;
+   caption-side: bottom;
+}
+caption {
+   padding: 0.3em;
+   color: #fff;
+    background: #000;
+}
+th {
+   background: #eee;
+}
