--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -20,4 +20,5 @@
   <% } %>
 </table>
 <% } %>
+<a href="/quizes/new"><button type="button">Crear pregunta</button></a>
 <p align="left">Numero de preguntas totales: <b><%=quizes.length %></b></p>
