Validacion de entradas

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,14 +5,11 @@ body  { font: 16px Georgia, serif; }
 #page-wrap > .main  { border: 1px solid #999; padding: 1%;
                       margin-bottom: 1px; color: black; }
 section > div { padding: 20px;}
-header, nav, section { background: #eee; text-align: center;}
-footer { background: #eee; text-align: center;}
+header, nav, section, footer { background: #eee; text-align: center;}
 nav span {margin: 0px 10px 0px 0px; }
+#ErrorMsgs { color: #f61; font-size: smaler;}
 form input { margin-top: 5px; margin-bottom: 5px;}
-table {
-   width: 100%;
-   border: 1px solid #000;
-}
+table {width: 100%;}
 th, td {
    width: 25%;
    text-align: center;
