--- a/public/stylesheets/wide.css
+++ b/public/stylesheets/wide.css
@@ -1,8 +1,7 @@
 body  { background: #999; }
-
 #page-wrap:after  { content: "Wide Layout";}
 
 nav { float: left; width: 15%; height: 200px;}
 nav span {margin: 0px 100px 0px 0px; }
-section {float: right; width: 80%; height: 200px;}
-footer { display: both; display: block; }
+section {float: right; width: 80%; height: auto;}
+footer { clear:both;display: block;width: 99%;}
