--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,18 +10,4 @@ nav span {margin: 0px 10px 0px 0px; }
 #ErrorMsgs { color: #f61; font-size: smaler;}
 form input { margin-top: 5px; margin-bottom: 5px;}
 table {width: 100%;}
-th, td {
-   width: 25%;
-   text-align: center;
-   vertical-align: top;
-   padding: 0.3em;
-   caption-side: bottom;
-}
-caption {
-   padding: 0.3em;
-   color: #fff;
-    background: #000;
-}
-th {
-   background: #eee;
-}
+td {border:1px solid black;}
