--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -12,9 +12,10 @@
   <% for (var i=0; i<quizes.length;i++) {  %>
     <tr>
       <td>
-        <a href="quizes/<%=quizes[i].id %>">
-          <%=quizes[i].pregunta %>
-        </a>
+        <a href="quizes/<%=quizes[i].id %>"><%=quizes[i].pregunta %></a>
+      </td>
+      <td>
+        <a href="quizes/<%=quizes[i].id %>/edit"><button>editar</button></a>
       </td>
     </tr>
   <% } %>
