--- a/views/quizes/_form.ejs
+++ b/views/quizes/_form.ejs
@@ -1,6 +1,17 @@
+<% var temas = new Array("Otro","Humanidades","Ocio","Ciencia","Tecnologia"); %>
 <label for="preg" class="rem">Pregunta:</label>
 <input type="text" id="preg" name="quiz[pregunta]" value="<%=quiz.pregunta %>"/> <p>
 <label for="resp" class="rem">Respuesta:</label>
 <input type="text" id="resp" name="quiz[respuesta]" value="<%=quiz.respuesta %>"/> <p>
-<a href="/quizes"><button type="button">Cancelar</button></a>
+<label for="tema" class="rem">Tema:</label>
+<select name="quiz[tema]">
+<% for (var i in temas) {
+  if (quiz.tema === temas[i]) { %>
+    <option value="<%=temas[i]%>" selected><%=temas[i]%></option>
+<%  } else { %>
+    <option value="<%=temas[i]%>"><%=temas[i]%></option>
+<% }
+} %>
+</select> <p>
 <input type="submit" value="Guardar"/>
+<a href="/quizes"><button type="button">Cancelar</button></a>
