--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,7 +1,7 @@
 <form method="get" action="/quizes" style="margin-bottom:5px;">
   <fieldset>
     <legend>Busqueda</legend>
-    <input type="text" name="search" value="texto" />
+    <input type="text" name="search" placeholder="texto a buscar" />
     <input type="submit" value="Buscar" />
   </fieldset>
 </form>
