--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,3 +11,4 @@ nav span {margin: 0px 10px 0px 0px; }
 form input { margin-top: 5px; margin-bottom: 5px;}
 table {width: 100%;}
 td {border:1px solid black;}
+.right{float: right;}
